<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference android:key="img" android:title="@string/img" android:summaryOn="@string/imgon" android:summaryOff="@string/imgoff" android:defaultValue="true"/>
	<CheckBoxPreference android:key="flashod" android:title="@string/flashod" android:summaryOn="@string/flashodon" android:summaryOff="@string/flashodoff" android:defaultValue="true" android:enabled="false"/>
	<CheckBoxPreference android:key="cache" android:title="@string/cache" android:summaryOn="@string/cacheon" android:summaryOff="@string/cacheoff" android:dependency="img" android:defaultValue="true"/>
	<ListPreference android:key="cachepath" android:title="@string/cachepath" android:summary="@string/cachepathl" android:entries="@array/paths" android:entryValues="@array/pathsv" android:defaultValue="0"/>
	<Preference android:key="info" android:title="@string/info" android:summary="@string/infol" android:enabled="false"/>
</PreferenceScreen>
